--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   min-height: 100%;
   margin: 0;
   padding: 0;
-  /* background-color: #000; */
+  background-color: rgb(46, 58, 43);
 }
 a {
   text-decoration: none;
